-> Added categories access check in articles module (duriel)
-> Added default user pictures (duriel)
-> Added global cellspacing variable (duriel)
-> Added pictures mod that allows implementing pictures to all mods easily (duriel)
-> Added the possibility to add automatically created news about a clanwar (duriel)
-> Added squad text (duriel)
-> Improved Squad View with text, wars, awards and ranks (GaHero)
-> Set httponly flag in cookies [available in PHP 5.2.0 or higher] (Denni)
-> Used some more caching to enhance the performance (duriel)
-> Updated fckeditor to version 2.6.4 beta (hajo)
-> Added comments feature to events and updated it for wars (hajo)


ClanSphere 2008.2.1 >> 2008-09-20
___________________________________________________________

>> Security: Fixed security bug using javascript insert abcode listimg (fr33z3m4n)
>> Security: Fixed security bug using javascript insert getusers (mc.alcatraz)

-> Added complete AJAX solution (duriel)
-> Added board statistics (duriel)
-> Added infos notification from csp-team (fr33z3m4n)
-> Fixed allowed commas in urls (duriel)
-> Fixed round generation in cup module (drag0n)
-> Fixed logging in on different clansphere installations on the same webserver (duriel)
-> Fixed showing html element strong in members module (ThreadID: 7852, duriel)
-> Fixed squads or clan msg (fr33z3m4n)
-> Fixed static pages comment removement (duriel)
-> Fixed users listing in messages to allow line breaks (duriel)
-> Fixed users templates and templates preview (duriel)

-> Made debug also allow attributes in html body tag (duriel)
-> News short text is now only shown when activated (duriel)
-> Limited mootools and slimbox to load only in gallery module (duriel)
-> Votes navlist now displays all current votes randomly (duriel)


ClanSphere 2008.2 >> 2008-08-15
___________________________________________________________

>> Security: Fixed security bug using javascript insert abcode url function Bugtracker ID: 171 (fr33z3m4n)
