@@ -12,33 +12,27 @@
   <table class="forum" cellpadding="0" cellspacing="{page:cellspacing}" style="width:{page:width}">
     <tr>
       <td class="leftc">{icon:kedit} {lang:max_text}</td>
-      <td class="leftb"><input type="text" name="max_text" value="{options:max_text}" maxlength="5" size="5"  />
-        {lang:indi}</td>
+      <td class="leftb"><input type="text" name="max_text" value="{options:max_text}" maxlength="5" size="5"  /> {lang:indi}</td>
     </tr>
     <tr>
       <td class="leftc">{icon:kedit} {lang:max_signatur}</td>
-      <td class="leftb"><input type="text" name="max_signatur" value="{options:max_signatur}" maxlength="4" size="4"  />
-        {lang:indi}</td>
+      <td class="leftb"><input type="text" name="max_signatur" value="{options:max_signatur}" maxlength="4" size="4"  /> {lang:indi}</td>
     </tr>
     <tr>
       <td class="leftc">{icon:resizerow} {lang:max_high}</td>
-      <td class="leftb"><input type="text" name="avatar_height" value="{options:max_high}" maxlength="4" size="4"  />
-        {lang:pix}</td>
+      <td class="leftb"><input type="text" name="avatar_height" value="{options:max_high}" maxlength="4" size="4"  /> {lang:pix}</td>
     </tr>
     <tr>
       <td class="leftc">{icon:resizecol} {lang:max_avatar_width}</td>
-      <td class="leftb"><input type="text" name="avatar_width" value="{options:max_avatar_width}" maxlength="4" size="4"  />
-        {lang:pix}</td>
+      <td class="leftb"><input type="text" name="avatar_width" value="{options:max_avatar_width}" maxlength="4" size="4"  /> {lang:pix}</td>
     </tr>
     <tr>
       <td class="leftc">{icon:fileshare} {lang:max_avatar_size}</td>
-      <td class="leftb"><input type="text" name="avatar_size" value="{options:max_avatar_size}" maxlength="4" size="4"  />
-        {lang:kbyte}</td>
+      <td class="leftb"><input type="text" name="avatar_size" value="{options:max_avatar_size}" maxlength="4" size="4"  /> {lang:kbyte}</td>
     </tr>
     <tr>
       <td class="leftc">{icon:fileshare} {lang:max_filesize}</td>
-      <td class="leftb"><input type="text" name="file_size" value="{options:max_filesize}" maxlength="4" size="4"  />
-        {lang:kbyte}</td>
+      <td class="leftb"><input type="text" name="file_size" value="{options:max_filesize}" maxlength="4" size="4"  /> {lang:kbyte}</td>
     </tr>
     <tr>
       <td class="leftc">{icon:fileshare} {lang:filetypes}</td>
@@ -56,6 +50,10 @@
     <tr>
       <td class="leftc">{icon:agt_reload} {lang:double_posts}</td>
       <td class="leftb"><input type="checkbox" name="doublep_allowed" value="1" onclick="javascript:cs_visible('dpdiv')" {options:double_posts} /><div style="visibility:{options:visible}" id="dpdiv">{options:input}</div></td>
+    </tr>
+    <tr>
+      <td class="leftc">{icon:add_sub_task} {lang:list_subforums}</td>
+      <td class="leftb"><input type="checkbox" name="list_subforums" value="1"{options:list_subforums} /></td>
     </tr>
     <tr>
       <td class="leftc">{icon:ksysguard} {lang:options}</td>
