@@ -26,7 +26,8 @@ ___________________________________________________________
 -> Added pictures mod that allows implementing pictures to all mods easily (duriel)
 -> Added the possibility to add automatically created news about a clanwar (duriel)
 -> Added squad text (duriel)
--> Improved Squad View with text, wars, awards and ranks (GaHero)
+-> Added the possibility to hide subforums in the board overview (duriel)
+-> Improved squads view with wars, awards and ranks (GaHero)
 -> Set httponly flag in cookies [available in PHP 5.2.0 or higher] (Denni)
 -> Used some more caching to enhance the performance (duriel)
 -> Updated fckeditor to version 2.6.4 beta (hajo)
